src/main/java/com/example/fas/exceptions/user/invalid/AmountInvalidException.java
package com.example.fas.exceptions.user.invalid;

public class AmountInvalidException extends RuntimeException {
    public AmountInvalidException(String message) {
        super(message);
    }
}
